RESOLVED FIXED271209
[IFC][Ruby] Failure to line break before/between ruby sequences
https://bugs.webkit.org/show_bug.cgi?id=271209
Summary [IFC][Ruby] Failure to line break before/between ruby sequences
alan
Reported 2024-03-18 20:40:23 PDT
Attachments
Patch (5.15 KB, patch)
2024-03-18 20:46 PDT, alan
no flags
[fast-cq]Patch (6.49 KB, patch)
2024-03-19 07:11 PDT, alan
no flags
alan
Comment 1 2024-03-18 20:46:50 PDT
alan
Comment 2 2024-03-19 07:11:01 PDT
Created attachment 470433 [details] [fast-cq]Patch
EWS
Comment 3 2024-03-19 09:56:52 PDT
Committed 276353@main (b8f448e7fd86): <https://commits.webkit.org/276353@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 470433 [details].
Note You need to log in before you can comment on or make changes to this bug.