[IFC][Ruby] Failure to line break before/between ruby sequences https://bugs.webkit.org/show_bug.cgi?id=271209 <rdar://122663646>

Reviewed by Antti Koivisto.

Not all "do not break before" characters have "do not break after" meaning. (e.g. no line should begin with KATAKANA MIDDLE DOT but it's ok to have it at the end of the line).
Let's divide them into 2 categories as seen in https://www.w3.org/TR/jlreq.

*LayoutTests/fast/ruby/ruby-with-unbreakable-characters-incorrect-width.html: use different punctuation to force line breaking at the right position.
* LayoutTests/fast/ruby/can-break-before-after-expected.html: Added.
* LayoutTests/fast/ruby/can-break-before-after.html: Added.
* Source/WebCore/layout/formattingContexts/inline/ruby/RubyFormattingContext.cpp:
(WebCore::Layout::canBreakBefore):
(WebCore::Layout::canBreakAfter):
(WebCore::Layout::RubyFormattingContext::isAtSoftWrapOpportunity):
(WebCore::Layout::canBreakAtCharacter): Deleted.

Canonical link: https://commits.webkit.org/276353@main